# medata

./: .env  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yml  manage.py  package-lock.json  pyproject.toml  requirements.txt
apps/kawasaki/: admin.py  apps.py  models.py  resource.py  serializers.py  signals.py  urls.py  views.py
apps/navigator/: apps.py  views.py
frontend/: components.d.ts  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.js
frontend/src/: App.vue  main.js  main.ts  router.js  vite-env.d.ts  vuex.d.ts
medata/: settings.py  urls.py  wsgi.py
scripts/: zScord.py
static/: AddPatientView-BwLg2Rvf.js  AddTestsView-BLGKwy0q.css  AddTestsView-LVqHO0_d.js  AddView-B2DGtCrB.js  AddView-DaxJj_C7.js  Col-CzR3t48K.js  DashboardView-BO16IoFs.js  DashboardView-Dm7HWEuE.js  DashboardView-a0lrctwj.js  HomeView-DwumpD7X.css  HomeView-sgna9qxg.js  InlineForm-BPqOcw6j.js  InlineForm-CHEQ4aho.js  InlineForm-DfjBhu_n.js  LoginView-2vK9h1Bv.js  LoginView-DuXyV25k.css  LoginView-xRRo18AJ.css  ManagerView-DcCYuQCd.css  PatientDetail-CbshqIS-.js  PatientDetail-Dkjv_RJv.js  PlusSquareOutlined-DdlzEbOT.js  RightOutlined-5C7QA5mh.js  UserOutlined-miXFUUl_.js  createForOfIteratorHelper-SBXSWyxR.js  dropdown-5nrX20iK.js  hasIn-CsO9C-3B.js  index-B7_ea9DU.js  index-BJWI4RI0.css  index-BMKGhP6v.js  index-BeimMwKc.js  index-Bgd_YiLT.js  index-BrL_LTco.js  index-BzPRrBgI.js  index-C-y8hFYS.js  index-C5EvdOSD.js  index-CDGnLlcn.js  index-CKpO3Wyb.js  index-CN6C-GMe.css  index-CSg5cDbo.js  index-CWq_LatF.js  (+19 more)
(+164 files in other folders)
